--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 
 header {
   background-color: rgb(255, 0, 200);
+  text-decoration: none;
   padding: 1rem 2rem;
   color: white;
   overflow-x: auto; /* allows horizontal scrolling inside the header */
@@ -24,7 +25,10 @@ header {
 
 .logo {
   font-size: 2rem;
+  color: white;
+  text-decoration: none;
 }
+
 
 .nav-links {
   list-style: none;
