knuckles on the suckles

--- a/style.css
+++ b/style.css
@@ -166,8 +166,10 @@ main {
   font-size: 16px;
   border: none;
   outline: none;
+  cursor: pointer;
   color: white;
   background-color: inherit;
+
   font-weight: bold;
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
