--- a/style.css
+++ b/style.css
@@ -161,6 +161,10 @@ main {
   overflow: hidden;
 }
 
+.mainp {
+  font-size: 20px;
+}
+
 /* Dropdown button */
 .dropdown .dropbtn {
   font-size: 16px;
