--- a/style.css
+++ b/style.css
@@ -48,6 +48,14 @@ header {
   text-align: center;
 }
 
+.shield {
+  width: 7%;
+}
+
+.hero2 {
+  padding: 3rem 2rem;
+}
+
 footer {
   text-align: center;
   padding: 1rem;
@@ -163,6 +171,11 @@ main {
 
 .mainp {
   font-size: 20px;
+}
+
+.h3title{
+  color:blue;
+  font-size: 24px;
 }
 
 /* Dropdown button */
