--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ header {
 }
 
 
+
+
 .nav-container {
   display: flex;
   justify-content: space-between;
@@ -186,7 +188,14 @@ main {
 }
 
 .banner {
-  margin-left: 0%;
-  margin-right: 0%;
-  margin-top: 0%;
+  background-image: url(banner.jpg);
+  background-size: cover;
+  background-position: center;
+  color: white;
+  text-align: center;
+  padding: 80px 0;
+  font-size: 2.5em;
+  font-weight: bold;
+  margin: 0;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
 }
